2014-08-04  Matt Baker  <mattbaker@apple.com>

        lldb_webkit.py throws exception when generating summary of null StringImpl
        https://bugs.webkit.org/show_bug.cgi?id=129448

        Reviewed by Jer Noble.

        Added checks for null StringImpl and 0 byte ReadMemory calls.

        * lldb/lldb_webkit.py:
        (WTFStringImpl_SummaryProvider):
        (ustring_to_string):
        (lstring_to_string):
        (WTFStringImplProvider.to_string):
        (WTFStringImplProvider.is_initialized):

2014-08-03  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Do not include JavaScriptCore stress tests in release tarballs
        https://bugs.webkit.org/show_bug.cgi?id=135503

        Reviewed by Martin Robinson.

        * gtk/manifest.txt: Exclude Source/JavaScriptCore/tests dir.

2014-07-30  David Farler  <dfarler@apple.com>

        build-webkittestrunner doesn't build the app target for iOS SDKs
        https://bugs.webkit.org/show_bug.cgi?id=135433

        Reviewed by Dan Bernstein.

        * Scripts/build-dumprendertree: Build the app target on iOS.
        * Scripts/build-webkittestrunner: Build the app target on iOS.
        * Scripts/webkitdirs.pm: Add -sdk flags when building for iOS.
        (buildXCodeProject):
        * Scripts/webkitpy/port/ios.py: Use --sdk flags instead of SDKROOT.
        (IOSSimulatorPort._build_driver_flags):

2014-07-30  David Farler  <dfarler@apple.com>

        Remove iOS Perl DumpRenderTree support target
        https://bugs.webkit.org/show_bug.cgi?id=135271

        Reviewed by Dan Bernstein.

        * DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj: Remove the target.
        * DumpRenderTree/ios/PerlSupport/DumpRenderTreeSupport.c: Removed.
        * DumpRenderTree/ios/PerlSupport/DumpRenderTreeSupportPregenerated.pm: Removed.
        * DumpRenderTree/ios/PerlSupport/DumpRenderTreeSupport_wrapPregenerated.c: Removed.