@@ -1,3 +1,13 @@
+2014-08-04  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        [GTK] run-launcher --gtk is broken
+        https://bugs.webkit.org/show_bug.cgi?id=135571
+
+        Reviewed by Martin Robinson.
+
+        * Scripts/webkitdirs.pm:
+        (builtDylibPathForName): Search for libwebkit2gtk-4.0
+
 2014-08-04  Matt Baker  <mattbaker@apple.com>
 
         lldb_webkit.py throws exception when generating summary of null StringImpl
